unify font-size control.

--- a/button.html
+++ b/button.html
@@ -119,12 +119,12 @@
                             按钮可以调整大小。
                         </p>
                         <div class="example">
-                            <button class="ui-button mini"><i class="ui-icon fa fa-users"></i> mini </button>
-                            <button class="ui-button small"><i class="ui-icon fa fa-users"></i> small </button>
-                            <button class="ui-button large"><i class="ui-icon fa fa-users"></i> large </button>
-                            <button class="ui-button big"><i class="ui-icon fa fa-users"></i> big </button>
-                            <button class="ui-button huge"><i class="ui-icon fa fa-users"></i> huge </button>
-                            <button class="ui-button massive"><i class="ui-icon fa fa-users"></i> massive </button>
+                            <button class="ui-button ui-mini"><i class="ui-icon fa fa-users"></i> mini </button>
+                            <button class="ui-button ui-small"><i class="ui-icon fa fa-users"></i> small </button>
+                            <button class="ui-button ui-large"><i class="ui-icon fa fa-users"></i> large </button>
+                            <button class="ui-button ui-big"><i class="ui-icon fa fa-users"></i> big </button>
+                            <button class="ui-button ui-huge"><i class="ui-icon fa fa-users"></i> huge </button>
+                            <button class="ui-button ui-massive"><i class="ui-icon fa fa-users"></i> massive </button>
                         </div>
 
                         <h3 id="button-fluid">Fluid Button</h3>
@@ -160,17 +160,17 @@
 
                         <h4>大按钮组合</h4>
                         <div class="example">
-                            <div class="ui-button-group large">
+                            <div class="ui-button-group ui-large">
                                 <button type="button" class="ui-button">Left</button>
                                 <button type="button" class="ui-button ui-active">Middle</button>
                                 <button type="button" class="ui-button">Right</button>
                             </div>
-                            <div class="ui-button-group big">
+                            <div class="ui-button-group ui-big">
                                 <button type="button" class="ui-button">Left</button>
                                 <button type="button" class="ui-button ui-active">Middle</button>
                                 <button type="button" class="ui-button">Right</button>
                             </div>
-                            <div class="ui-button-group massive">
+                            <div class="ui-button-group ui-massive">
                                 <button type="button" class="ui-button">Left</button>
                                 <button type="button" class="ui-button ui-active">Middle</button>
                                 <button type="button" class="ui-button">Right</button>
@@ -180,12 +180,12 @@
                         <h4>组合的组合</h4>
                         <div class="example">
                             <div>
-                                <div class="ui-button-group big">
+                                <div class="ui-button-group ui-big">
                                     <button type="button" class="ui-button">Left</button>
                                     <button type="button" class="ui-button active">Middle</button>
                                     <button type="button" class="ui-button">Right</button>
                                 </div>
-                                <div class="ui-button-group big">
+                                <div class="ui-button-group ui-big">
                                     <button type="button" class="ui-button">Left</button>
                                     <button type="button" class="ui-button active">Middle</button>
                                     <button type="button" class="ui-button">Right</button>
