--- a/checkbox.html
+++ b/checkbox.html
@@ -25,7 +25,7 @@
             </div>
             <div class="ui-u-4-5">
                 <div id="main" class="content ui-p2 ui-pt0">
-                    <h2 id="icons" class="no-mt">单选和复选框（Checkbox &amp; Radiobox）</h2>
+                    <h2 id="icons" class="ui-mt0">单选和复选框（Checkbox &amp; Radiobox）</h2>
                     <div class="ui-divider"></div>
                     <p>
                         用CSS定义Checkbox和Radiobox的样式。同时支持Slider和Switch样式。
@@ -38,15 +38,15 @@
                         <div class="example">
                             <h4>1. 你喜欢的旅游胜地？</h4>
                             <div>
-                                <div class="ui-checkbox mr1">
+                                <div class="ui-checkbox ui-mr1">
                                     <input type="checkbox" checked="checked" disabled="disabled" id="unique-id">
                                     <label for="unique-id">香港</label>
                                 </div>
-                                <div class="ui-checkbox mr1">
+                                <div class="ui-checkbox ui-mr1">
                                     <input type="checkbox" id="unique-id-2">
                                     <label for="unique-id-2">泰国</label>
                                 </div>
-                                <div class="ui-checkbox mr1">
+                                <div class="ui-checkbox ui-mr1">
                                     <input type="checkbox" id="unique-id-3">
                                     <label for="unique-id-3">新加坡</label>
                                 </div>
@@ -90,15 +90,15 @@
                             </div>
                             <h4>2. 你在公司的职位？</h4>
                             <div>
-                                <div class="ui-radio mr2">
+                                <div class="ui-radio ui-mr2">
                                     <input type="radio" id="unique-id-10" name="company2">
                                     <label for="unique-id-10">总监</label>
                                 </div>
-                                <div class="ui-radio mr2">
+                                <div class="ui-radio ui-mr2">
                                     <input type="radio" checked="checked" id="unique-id-11" name="company2">
                                     <label for="unique-id-11">经理</label>
                                 </div>
-                                <div class="ui-radio mr2">
+                                <div class="ui-radio ui-mr2">
                                     <input type="radio" id="unique-id-12" name="company2">
                                     <label for="unique-id-12">工程师</label>
                                 </div>
@@ -112,30 +112,30 @@
                         <div class="example">
                             <h4>1. 你喜欢的旅游胜地？</h4>
                             <div>
-                                <div class="mr1">
+                                <div class="ui-mr1">
                                     <input type="checkbox" id="unique-id-13">
                                     <label for="unique-id-13">香港</label>
                                 </div>
-                                <div class="mr1">
+                                <div class="ui-mr1">
                                     <input type="checkbox" id="unique-id-14">
                                     <label for="unique-id-14">泰国</label>
                                 </div>
-                                <div class="mr1">
+                                <div class="ui-mr1">
                                     <input type="checkbox" id="unique-id-15">
                                     <label for="unique-id-15">新加坡</label>
                                 </div>
                             </div>
                             <h4>2. 你在公司的职位？</h4>
                             <div>
-                                <div class="mr2">
+                                <div class="ui-mr2">
                                     <input type="radio" id="unique-id-16" name="company3">
                                     <label for="unique-id-16">总监</label>
                                 </div>
-                                <div class="mr2">
+                                <div class="ui-mr2">
                                     <input type="radio" id="unique-id-17" name="company3">
                                     <label for="unique-id-17">经理</label>
                                 </div>
-                                <div class="mr2">
+                                <div class="ui-mr2">
                                     <input type="radio" id="unique-id-18" name="company3">
                                     <label for="unique-id-18">工程师</label>
                                 </div>
@@ -169,35 +169,35 @@
                             自定义尺寸。
                         </p>
                         <div class="example">
-                            <div class="ui-slider ui-large ui-block mb2">
+                            <div class="ui-slider ui-large ui-block ui-mb2">
                                 <input type="checkbox" name="walk" id="slider-large" />
                                 <label for="slider-large">Allow others to see when your dog is on a walk</label>
                             </div>
-                            <div class="ui-slider ui-big ui-block mb2">
+                            <div class="ui-slider ui-big ui-block ui-mb2">
                                 <input type="checkbox" name="walk" id="slider-huge" />
                                 <label for="slider-huge">Allow others to see when your dog is on a walk</label>
                             </div>
-                            <div class="ui-toggle ui-large ui-block mb2">
+                            <div class="ui-toggle ui-large ui-block ui-mb2">
                                 <input type="checkbox" name="walk" id="toggle-large" />
                                 <label for="toggle-large">Allow others to see when your dog is on a walk</label>
                             </div>
-                            <div class="ui-toggle ui-big ui-block mb2">
+                            <div class="ui-toggle ui-big ui-block ui-mb2">
                                 <input type="checkbox" name="walk" id="toggle-huge" />
                                 <label for="toggle-huge">Allow others to see when your dog is on a walk</label>
                             </div>
-                            <div class="ui-radio ui-block ui-large mb2">
+                            <div class="ui-radio ui-block ui-large ui-mb2">
                                 <input type="radio" id="unique-id-large-1" name="company">
                                 <label for="unique-id-large-1">Allow others to see when your dog is on a walk</label>
                             </div>
-                            <div class="ui-radio ui-block ui-big mb2">
+                            <div class="ui-radio ui-block ui-big ui-mb2">
                                 <input type="radio" id="unique-id-huge-1" name="company">
                                 <label for="unique-id-huge-1">Allow others to see when your dog is on a walk</label>
                             </div>
-                            <div class="ui-checkbox ui-block ui-large mb2">
+                            <div class="ui-checkbox ui-block ui-large ui-mb2">
                                 <input type="checkbox" id="unique-id-large-2" >
                                 <label for="unique-id-large-2">Allow others to see when your dog is on a walk</label>
                             </div>
-                            <div class="ui-checkbox ui-block ui-big mb2">
+                            <div class="ui-checkbox ui-block ui-big ui-mb2">
                                 <input type="checkbox" id="unique-id-huge-2" >
                                 <label for="unique-id-huge-2">Allow others to see when your dog is on a walk</label>
                             </div>
