--- a/input.html
+++ b/input.html
@@ -91,7 +91,7 @@
                         <h3 id="input-sizes">输入框尺寸</h3>
                         <div class="example">
                             <div>
-                                <div class="ui-input right with-icon small">
+                                <div class="ui-input right with-icon ui-small">
                                     <input type="text" placeholder="small">
                                     <i class="fa fa-search ui-icon"></i>
                                 </div>
@@ -103,19 +103,19 @@
                                 </div>
                             </div>
                             <div class="ui-mt1">
-                                <div class="ui-input right with-icon big">
+                                <div class="ui-input right with-icon ui-big">
                                     <input type="text" placeholder="big">
                                     <i class="fa fa-search ui-icon"></i>
                                 </div>
                             </div>
                             <div class="ui-mt1">
-                                <div class="ui-input right with-icon huge">
+                                <div class="ui-input right with-icon ui-huge">
                                     <input type="text" placeholder="huge">
                                     <i class="fa fa-search ui-icon"></i>
                                 </div>
                             </div>
                             <div class="ui-mt1">
-                                <div class="ui-input right with-icon massive">
+                                <div class="ui-input right with-icon ui-massive">
                                     <input type="text" placeholder="massive">
                                     <i class="fa fa-search ui-icon"></i>
                                 </div>
@@ -155,7 +155,7 @@
                         <h3 id="input-buttons-group">输入框和按钮组合</h3>
                         <div class="example">
                             <div class="ui-mt1">
-                                <div class="ui-input action small">
+                                <div class="ui-input action ui-small">
                                     <div class="action-container ui-button-group">
                                         <button type="button" class="ui-button">Left</button>
                                         <button type="button" class="ui-button icon-only"><i class="ui-icon fa fa-caret-down"></i></button>
@@ -164,7 +164,7 @@
                                 </div>
                             </div>
                             <div class="ui-mt1">
-                                <div class="ui-input action large">
+                                <div class="ui-input action ui-large">
                                     <div class="action-container ui-button-group">
                                         <button type="button" class="ui-button">Left</button>
                                         <button type="button" class="ui-button icon-only"><i class="ui-icon fa fa-caret-down"></i></button>
@@ -173,7 +173,7 @@
                                 </div>
                             </div>
                             <div class="ui-mt1">
-                                <div class="ui-input action massive">
+                                <div class="ui-input action ui-massive">
                                     <div class="action-container ui-button-group">
                                         <button type="button" class="ui-button">Left</button>
                                         <button type="button" class="ui-button icon-only"><i class="ui-icon fa fa-caret-down"></i></button>
