--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>ESF</title>
         <link rel="stylesheet" href="assets/main.css" />
-        <link rel="stylesheet" href="src/icons/css/font-awesome.css" />
+        <link rel="stylesheet" href="src/icons/main.css" />
         <link rel="stylesheet" href="demo.css" />
     </head>
     <body class="">
@@ -16,7 +16,7 @@
                     </h1>
                 </div>
                 <div class="ui-u-4-5">
-                    <div id="main-menu" class="ui-mt1 ui-menu horizontal hoverable ui-huge-font ui-fr ui-mr3">
+                    <div id="main-menu" class="ui-mt1 ui-menu horizontal hoverable ui-huge ui-fr ui-mr3">
                         <ul>
                             <li class="ui-menu-item">
                                 <a href="home.html" target="container-frame"><i class="fa fa-home"></i> 介绍</a>
@@ -35,7 +35,7 @@
                                 </ul>
                             </li>
                             <li class="ui-menu-item"><a href="menu.html" target="container-frame"><i class="fa fa-anchor"></i> 导航</a></li>
-                            <li class="ui-menu-item"><a href="http://fontello.com/" target="container-frame"><i class="fa fa-file-image-o"></i> 图标</a></li>
+                            <li class="ui-menu-item"><a href="icons.html" target="container-frame"><i class="fa fa-file-image-o"></i> 图标</a></li>
                         </ul>
                     </div>
                 </div>
