--- a/button.html
+++ b/button.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>UI - ESUI Demo</title>
         <link rel="stylesheet" href="assets/main.css" />
-        <link rel="stylesheet" href="src/icons/css/font-awesome.css" />
+        <link rel="stylesheet" href="src/icons/main.css" />
         <link rel="stylesheet" href="demo.css" />
         <link rel="stylesheet" href="assets/prism.css" />
         <script src="assets/prism.js"></script>
