--- a/progressbar.html
+++ b/progressbar.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>Home - ESUI Demo</title>
         <link rel="stylesheet" href="assets/main.css" />
-        <link rel="stylesheet" href="src/icons/css/font-awesome.css" />
+        <link rel="stylesheet" href="src/icons/main.css" />
         <link rel="stylesheet" href="demo.css" />
     </head>
     <body>
