--- a/home.html
+++ b/home.html
@@ -9,8 +9,6 @@
     </head>
     <body class="ui-m3">
         <h2 class="align-center no-mt">ESF</h2>
-        <p>
-            ESF是一个样式框架，它基于est。为开发者提供了一套可以简单定制的CSS样式。
-        </p>
+        <p>ESF是作为一个HTML, CSS框架。它为开发者提供一套可灵活定制的CSS样式并且规范了基础组件DOM结构。它基于<a href="https://github.com/ecomfe/est">EST</a>，为<a href="https://github.com/ecomfe/esui">ESUI</a>新版提供基础样式支持。</p>
     </body>
 </html>
